# Client

./: .gitignore  .gitmodules  .pylintrc  Dockerfile  Makefile  README.md  installCppLibs.sh  install_cpp_libs.sh  lint.py  requirements.txt  run.py
.github/workflows/: combine.yml  pythonpackage.yml
CppCode/SampleLibrary/: CMakeLists.txt  CallbackClass.cpp  CallbackClass.hpp  Model.cpp  Model.hpp  Network.cpp  Network.hpp  library.cpp  library.h
CppCode/SampleTest/: CMakeLists.txt  main.cpp
PythonCode/Client/: requirements.txt
assets/: AssetSources.md
assets/Connection/: connection.json
assets/GUI/: GUITheme.json  HUDTheme.json  settings.json
assets/Menu/: MainMenuTheme.json  help_text.html  settings.json
assets/PolyPixel2D/: License.txt
assets/Wiki/: Draft.html  Gadget.html  Property.html  Round.html  Scenario.html  Victory.html  character.html  scenario.html
controller/: Controller.py  ControllerNetworkInterface.py  ControllerView.py  __init__.py
exampleconfigs/: testconfig.scenario
model/: Character.py  CharacterProperties.py  Gadgets.py  Operation.py  Scenario.py  __init__.py
network/: Callback.py  InitCppy.py  InitCppyy.py  LibClientHandler.py  NetworkEvent.py
pygame/: isoTest.py
pygame/model/: Gadgets.py  (+3 more)
test/: exampleTest.py  runAllTests.py  testExample.py  testUtilCoordinates.py  testUtilDatastructure.py  testUtilTransforms.py
util/: Coordinates.py  Datastructures.py  Transforms.py  WebsocketEcho.py
view/: BasicView.py  GameView.py  IsoElements.py  MainMenu.py  NetworkViewInterface.py  ViewConstants.py  ViewSettings.py
(+49 files in other folders)
